--- a/Main/appsettings.json
+++ b/Main/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MathSqlContext": "Server=(localdb)\\mssqllocaldb;Database=MathSqlContext-d230dc4d-8639-4760-ae6a-9ee7ce6862fe;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Main;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
