added utility project. debugging why get, update, and delete unit tests aren't working

--- a/DatabaseClientsUnitTests/DatabaseClientsUnitTests.csproj
+++ b/DatabaseClientsUnitTests/DatabaseClientsUnitTests.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatabaseClients\DatabaseClients.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
