--- a/DatabaseClients/DatabaseClients.csproj
+++ b/DatabaseClients/DatabaseClients.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.43.0" />
+    <PackageReference Include="Microsoft.Azure.SqlDatabase.ElasticScale.Client" Version="2.4.2" />
   </ItemGroup>
 
 </Project>
